--- a/Virtual machines and Containers/code/README
+++ b/Virtual machines and Containers/code/README
@@ -1,6 +1,1 @@
-This folder contains documents to:
-
-1. Install VirtualBox on a Windows 10 machine.
-2. Create a VM for installting Ubuntu.
-3. Install Ubuntu 18.04.
-4. Install Docker and run a sample Java app.
+This folder contains code for a simple Docker based java app.
