--- a/Virtual machines and Containers/README
+++ b/Virtual machines and Containers/README
@@ -1,4 +1,4 @@
-This folder contains documents and to:
+This folder contains documents and code to:
 
 1. Install VirtualBox on a Windows 10 machine.
 2. Create a VM for installting Ubuntu.
