--- a/VMs-and-Containers/README
+++ b/VMs-and-Containers/README
@@ -4,3 +4,6 @@ This folder contains documents and code to:
 2. Create a VM for installting Ubuntu.
 3. Install Ubuntu 18.04.
 4. Install Docker and run a sample Java app.
+
+Download the contents of docs folder to your local machine for  best possible 
+experience as the links don't work when viewed from github in a web browser.
